[gd_scene load_steps=4 format=1]

[ext_resource path="res://ScoreExplosion.gd" type="Script" id=1]
[ext_resource path="res://sprites/redPlayer.png" type="Texture" id=2]
[ext_resource path="res://sprites/ball.png" type="Texture" id=3]

[node name="ScoreExplosion" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="PlayerParticles" type="Particles2D" parent="."]

config/amount = 64
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.3
config/texture = ExtResource( 2 )
params/direction = 90.0
params/spread = 90.0
params/linear_velocity = 300.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.75
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="BallParticles" type="Particles2D" parent="."]

config/amount = 64
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.3
config/texture = ExtResource( 3 )
params/direction = 90.0
params/spread = 90.0
params/linear_velocity = 300.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.75
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="GoalParticles" type="Particles2D" parent="."]

config/amount = 64
config/lifetime = 1.0
config/emit_timeout = 1.0
config/emitting = false
config/process_mode = 1
config/explosiveness = 0.3
params/direction = 90.0
params/spread = 90.0
params/linear_velocity = 300.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 20.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.808319, 0.949219, 0, 1 )


